# repo-pilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  PRODUCT_SPEC.md  RELEASE_GATES.md
evals/: baseline.json  dataset.json  report.json  v1.1-report.json  v1.2-report.json
scripts/: build_release.py  check_release.py
src/repopilot/: __init__.py  agent.py  api.py  cli.py  concurrency.py  config.py  demo.py  errors.py  evaluation.py  ingestion.py  mcp.py  models.py  observability.py  persistence.py  reporting.py  repository_manager.py  research_tools.py  retrieval.py  runtime.py  service.py  tools.py  workflow.py
src/repopilot/providers/: __init__.py  base.py  deterministic.py  factory.py  openai_compatible.py  resilient.py  telemetry.py
src/repopilot/static/: app.css  app.js  index.html
src/repopilot/storage/: __init__.py  database.py  models.py  repositories.py
tests/: test_agent.py  test_agentic_workflow.py  test_api.py  test_browser.py  test_cli.py  test_concurrency.py  test_config.py  test_database_migration.py  test_evaluation.py  test_ingestion.py  test_mcp.py  test_memory.py  test_observability.py  test_persistence.py  test_providers.py  test_release_scripts.py  test_reporting.py  test_repository_manager.py  test_research_api.py  test_runtime.py  test_service.py  test_storage.py  test_tools.py
