[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "repo-pilot"
version = "1.3.0"
description = "LangGraph-orchestrated, evidence-first repository research agent with citations and recovery"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "RepoPilot" }]
dependencies = [
  "aiosqlite>=0.20,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langgraph>=1.2,<2",
  "orjson>=3.10,<4",
  "prometheus-client>=0.21,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "redis>=5.2,<7",
  "sqlalchemy>=2.0,<3",
  "tenacity>=9,<10",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30,<1"]
dev = [
  "asgi-lifespan>=2,<3",
  "coverage[toml]>=7.6,<8",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
repopilot = "repopilot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repopilot"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/docs/ACCEPTANCE.md",
  "/evals/*-report.json",
  "/evals/report.json",
  "/release",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["repopilot"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header", "fastapi.File"]

[tool.ruff.lint.per-file-ignores]
"src/repopilot/concurrency.py" = ["ASYNC109"]
"src/repopilot/demo.py" = ["RUF001"]
"src/repopilot/workflow.py" = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["repopilot"]

[dependency-groups]
dev = [
    "asgi-lifespan>=2,<3",
]
